--- a/pages/canceled_orders.html
+++ b/pages/canceled_orders.html
@@ -91,8 +91,8 @@
             <div class="row w-100 mx-auto">
                 <!-- Order N:1 -->
                 <div class="col-12 bg-white rounded mb-4 mt-encriment p-md-5 p-3">
-                    <div class="row">
-                        <h5 class="fw-bold">Order # 3456789</h5><!-- Order ID -->
+                    <div class="row mb-4 open_sans">
+                        <h5 class="fw-bold manrope">Order # 3456789</h5><!-- Order ID -->
                         <!-- Order Payment -->
                         <div class="col-lg-3 col-md-6 col-12 mb-lg-3 mb-md-2 mb-2">
                             <p>Date: <b>12/07/2022</b></p>
@@ -107,7 +107,7 @@
                     </div>
                     <div class="row order_steps_blog mb-4 pt-sm-5 pt-4">
                         <!-- Buyeer -->
-                        <div class="col-lg-3 col-md-12 col-12 mb-4">
+                        <div class="col-lg-3 col-12 mb-4 open_sans">
                             <p>Receiver: <b>Ahmadov Chingiz,
                                     Grosse Scharrnstr. 9,
                                     +49 176 36357787,
@@ -116,9 +116,9 @@
                                 </b></p>
                         </div>
                         <!-- Order Progress -->
-                        <ul class="order__steps col-lg-9 col-md-12 col-sm-12">
+                        <ul class="order__steps col-lg-9 col-12">
                             <!-- red line -->
-                            <div class="order_steps_line" style="width: 25%;"></div>
+                            <div class="order_steps_line w-25"></div>
                             <li class="order__step active">
                                 <i class="fs-lg-4 fs-6 fa-solid fa-check"></i>
                                 <span class="order_steps_text">Ready for dispatch</span>
@@ -214,8 +214,8 @@
                 </div>
                 <!-- Order N:2 -->
                 <div class="col-12 bg-white rounded mb-4 p-md-5 p-3">
-                    <div class="row mb-4">
-                        <h5 class="fw-bold">Order # 3456789</h5><!-- Order ID -->
+                    <div class="row mb-4 open_sans">
+                        <h5 class="fw-bold manrope">Order # 3456789</h5><!-- Order ID -->
                         <!-- Order Payment -->
                         <div class="col-lg-3 col-md-6 col-12 mb-lg-3 mb-md-2 mb-2">
                             <p>Date: <b>12/07/2022</b></p>
@@ -230,7 +230,7 @@
                     </div>
                     <div class="row order_steps_blog mb-4 pt-sm-5 pt-4">
                         <!-- Buyeer -->
-                        <div class="col-lg-3 col-md-12 col-12 mb-4">
+                        <div class="col-lg-3 col-12 mb-4 open_sans">
                             <p>Receiver: <b>Ahmadov Chingiz,
                                     Grosse Scharrnstr. 9,
                                     +49 176 36357787,
@@ -239,7 +239,7 @@
                                 </b></p>
                         </div>
                         <!-- Order Progress -->
-                        <ul class="order__steps col-lg-9 col-md-12 col-sm-12">
+                        <ul class="order__steps col-lg-9 col-12">
                             <!-- red line -->
                             <div class="order_steps_line" style="width: 25%;"></div>
                             <li class="order__step active">
