--- a/pages/processing_orders.html
+++ b/pages/processing_orders.html
@@ -90,8 +90,8 @@
             <div class="row w-100 mx-auto">
                 <!-- Order N:1 -->
                 <div class="col-12 bg-white p-md-5 p-3 rounded mb-4 mt-encriment">
-                    <div class="row mb-4">
-                        <h5 class="fw-bold">Order # 3456789</h5><!-- Order ID -->
+                    <div class="row mb-4 open_sans">
+                        <h5 class="fw-bold manrope">Order # 3456789</h5><!-- Order ID -->
                         <!-- Order Payment -->
                         <div class="col-lg-3 col-md-6 col-12 mb-lg-3 mb-md-2 mb-2">
                             <p>Date: <b>12/07/2022</b></p>
@@ -106,7 +106,7 @@
                     </div>
                     <div class="row order_steps_blog mb-4">
                         <!-- Buyeer -->
-                        <div class="col-lg-3 col-md-12 col-12 mb-4">
+                        <div class="col-lg-3 col-12 mb-4 open_sans">
                             <p>Receiver: <b>Ahmadov Chingiz,
                                     Grosse Scharrnstr. 9,
                                     +49 176 36357787,
@@ -115,7 +115,7 @@
                                 </b></p>
                         </div>
                         <!-- Order Progress -->
-                        <ul class="order__steps col-lg-9 col-md-12 col-sm-12">
+                        <ul class="order__steps col-lg-9 col-12">
                             <!-- red line -->
                             <div class="order_steps_line" style="width: 5%;"></div>
                             <li class="order__step">
@@ -207,8 +207,8 @@
                 </div>
                 <!-- Order N:2 -->
                 <div class="col-12 bg-white p-md-5 p-3 rounded mb-4">
-                    <div class="row mb-4">
-                        <h5 class="fw-bold">Order # 3456789</h5><!-- Order ID -->
+                    <div class="row mb-4 open_sans">
+                        <h5 class="fw-bold manrope">Order # 3456789</h5><!-- Order ID -->
                         <!-- Order Payment -->
                         <div class="col-lg-3 col-md-6 col-12 mb-lg-3 mb-md-2 mb-2">
                             <p>Date: <b>12/07/2022</b></p>
@@ -223,7 +223,7 @@
                     </div>
                     <div class="row order_steps_blog mb-4">
                         <!-- Buyeer -->
-                        <div class="col-lg-3 col-md-12 col-12 mb-4">
+                        <div class="col-lg-3 col-12 mb-4 open_sans">
                             <p>Receiver: <b>Ahmadov Chingiz,
                                     Grosse Scharrnstr. 9,
                                     +49 176 36357787,
@@ -232,7 +232,7 @@
                                 </b></p>
                         </div>
                         <!-- Order Progress -->
-                        <ul class="order__steps col-lg-9 col-md-12 col-sm-12">
+                        <ul class="order__steps col-lg-9 col-12">
                             <!-- red line -->
                             <div class="order_steps_line w-50"></div>
                             <li class="order__step active">
