--- a/pages/completed_orders.html
+++ b/pages/completed_orders.html
@@ -91,11 +91,11 @@
             <div class="row w-100 mx-auto">
                 <!-- Order N:1 -->
                 <div class="col-12 bg-white p-md-5 p-3 rounded mb-4 mt-encriment order">
-                    <button class="btn btn-lg btn-white shadow print">
+                    <button class="btn btn-lg btn__square btn-white shadow print">
                         <i class="fa-solid fa-print"></i>
                     </button>
-                    <div class="row mb-4">
-                        <h5 class="fw-bold">Order # 3456789</h5><!-- Order ID -->
+                    <div class="row mb-4 open_sans">
+                        <h5 class="fw-bold manrope">Order # 3456789</h5><!-- Order ID -->
                         <!-- Order Payment -->
                         <div class="col-lg-3 col-md-6 col-12 mb-lg-3 mb-md-2 mb-2">
                             <p>Date: <b>12/07/2022</b></p>
@@ -110,7 +110,7 @@
                     </div>
                     <div class="row order_steps_blog mb-4">
                         <!-- Buyeer -->
-                        <div class="col-lg-3 col-md-12 col-12 mb-4">
+                        <div class="col-lg-3 col-12 mb-4 open_sans">
                             <p>Receiver: <b>Ahmadov Chingiz,
                                     Grosse Scharrnstr. 9,
                                     +49 176 36357787,
@@ -119,7 +119,7 @@
                                 </b></p>
                         </div>
                         <!-- Order Progress -->
-                        <ul class="order__steps col-lg-9 col-md-12 col-sm-12">
+                        <ul class="order__steps col-lg-9 col-12">
                             <!-- red line -->
                             <div class="order_steps_line" style="width: 75%;"></div>
                             <li class="order__step active">
@@ -210,12 +210,12 @@
                     </div>
                 </div>
                 <!-- Order N:2 -->
-                <div class="col-12 bg-white p-md-5 p-3 rounded mb-4 order2">
-                    <button class="btn btn-lg btn-white shadow print">
+                <div class="col-12 bg-white p-md-5 p-3 rounded mb-4 mt-encriment order">
+                    <button class="btn btn-lg btn__square btn-white shadow print">
                         <i class="fa-solid fa-print"></i>
                     </button>
-                    <div class="row mb-4">
-                        <h5 class="fw-bold">Order # 3456789</h5><!-- Order ID -->
+                    <div class="row mb-4 open_sans">
+                        <h5 class="fw-bold manrope">Order # 3456789</h5><!-- Order ID -->
                         <!-- Order Payment -->
                         <div class="col-lg-3 col-md-6 col-12 mb-lg-3 mb-md-2 mb-2">
                             <p>Date: <b>12/07/2022</b></p>
@@ -230,7 +230,7 @@
                     </div>
                     <div class="row order_steps_blog mb-4">
                         <!-- Buyeer -->
-                        <div class="col-lg-3 col-md-12 col-12 mb-4">
+                        <div class="col-lg-3 col-12 mb-4 open_sans">
                             <p>Receiver: <b>Ahmadov Chingiz,
                                     Grosse Scharrnstr. 9,
                                     +49 176 36357787,
@@ -239,7 +239,7 @@
                                 </b></p>
                         </div>
                         <!-- Order Progress -->
-                        <ul class="order__steps col-lg-9 col-md-12 col-sm-12">
+                        <ul class="order__steps col-lg-9 col-12">
                             <!-- red line -->
                             <div class="order_steps_line" style="width: 75%;"></div>
                             <li class="order__step active">
@@ -275,8 +275,36 @@
                             class="col text-danger d-flex justify-content-between align-items-start fw-bolder w-100 rounded bg-light p-3 mb-1">
                             <p class="text-start w-50">C301-i programmable TOTP token</p><!-- Product Name -->
                             <p>5</p><!-- Product Count -->
+                            <p>€9.<sup>00</sup></p><!-- Product Price -->
+                            <p>€45.<sup>00</sup></p><!-- Product Total Price -->
+                        </div>
+                        <div
+                            class="col text-danger d-flex justify-content-between align-items-start fw-bolder w-100 rounded bg-light p-3 mb-1">
+                            <p class="text-start w-50">T2F2-NFC-Slim FIDO2 Security key</p><!-- Product Name -->
+                            <p>1</p><!-- Product Name -->
+                            <p>€36.<sup>00</sup></p><!-- Product Price -->
+                            <p>€36.<sup>00</sup></p><!-- Product Total Price -->
+                        </div>
+                        <div
+                            class="col text-danger d-flex justify-content-between align-items-start fw-bolder w-100 rounded bg-light p-3 mb-1">
+                            <p class="text-start w-50">C202 classic TOTP token</p><!-- Product Name -->
+                            <p>6</p><!-- Product Name -->
                             <p>€20.<sup>00</sup></p><!-- Product Price -->
-                            <p>€20.<sup>00</sup></p><!-- Product Total Price -->
+                            <p>€120.<sup>00</sup></p><!-- ProductTotal Price -->
+                        </div>
+                        <div
+                            class="col text-danger d-flex justify-content-between align-items-start fw-bolder w-100 rounded bg-light p-3 mb-1">
+                            <p class="text-start w-50">USB Programmable TOTP Tokens</p><!-- Product Name -->
+                            <p>15</p><!-- Product Name -->
+                            <p>€20.<sup>00</sup></p><!-- Product Price -->
+                            <p>€300.<sup>00</sup></p><!-- ProductTotal Price -->
+                        </div>
+                        <div
+                            class="col text-danger d-flex justify-content-between align-items-start fw-bolder w-100 rounded bg-light p-3 mb-1">
+                            <p class="text-start w-50">T2F2-NFC-Slim FIDO2 Security key</p><!-- Product Name -->
+                            <p>5</p><!-- Product Name -->
+                            <p>€20.<sup>00</sup></p><!-- Product Price -->
+                            <p>€100.<sup>00</sup></p><!-- ProductTotal Price -->
                         </div>
                     </div>
                     <!-- Orders Price -->
@@ -285,7 +313,7 @@
                         <div
                             class="col d-flex justify-content-between align-items-start fw-bolder w-100 rounded bg-grey p-3 mb-1">
                             <p>Subtotal</p>
-                            <p>€20.<sup>00</sup></p>
+                            <p>€740.<sup>00</sup></p>
                         </div>
                         <!-- Shipping Price -->
                         <div
@@ -297,7 +325,7 @@
                         <div
                             class="col d-flex justify-content-between align-items-start fw-bolder w-100 rounded bg-grey p-3 mb-1">
                             <p>Total</p>
-                            <p>€60.<sup>00</sup></p>
+                            <p>€780.<sup>00</sup></p>
                         </div>
                     </div>
                 </div>
