--- a/pages/tools.html
+++ b/pages/tools.html
@@ -81,8 +81,8 @@
                     </ul>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-6 col-md-8 col-12 ">
+            <div class="row pb-4">
+                <div class="col-lg-6 col-md-8 col-12">
                     <div class="col-12 bg-blog green">
                         <p class="p-3">Cross-platform (Python) solution has been tested with Windows 10/11, Ubuntu 20.04
                             and
@@ -365,7 +365,8 @@
             </div>
             <div class="row mb-lg-4 mb-3 mx-auto">
                 <div class="col-12 bg-blog">
-                    <p class="p-3 open_sans fs-14">Important! Please make sure you use the correct application, as using a wrong app may
+                    <p class="p-3 open_sans fs-14">Important! Please make sure you use the correct application, as using
+                        a wrong app may
                         lock the device out. While this authentication is implemented in some models (Molto1 and Molto2
                         etc.), in some models, such as C301, OTPC* and miniOTP* cards, NFC access is left unrestricted
                         by
@@ -388,7 +389,8 @@
                 <div class="col-lg-6 col-12 mb-3">
                     <div class="bg-white py-lg-4 px-lg-3 py-4 px-3 rounded" style="min-height: 260px;">
                         <h4 class="tools_content_title mb-4">NFC Tokens</h4>
-                        <p class="tools_content_text">Android devices should be equipped with an NFC chip. iPhone apps are compatible with models
+                        <p class="tools_content_text">Android devices should be equipped with an NFC chip. iPhone apps
+                            are compatible with models
                             newer
                             than iPhone 7 and with iOS v13 or higher. Windows application will require an external USB
                             NFC
@@ -401,7 +403,8 @@
                 <div class="col-lg-6 col-12 mb-3">
                     <div class="bg-white py-lg-4 px-lg-3 py-4 px-3 rounded" style="min-height: 260px;">
                         <h4 class="tools_content_title mb-3">USB Tokens</h4>
-                        <p class="tools_content_text">No additional device, driver nor any other installation is needed. USB cable is supplied
+                        <p class="tools_content_text">No additional device, driver nor any other installation is needed.
+                            USB cable is supplied
                             (USB-A
                             to
                             micro-USB port), any standard USB cable can be used (with data support). For computers
@@ -413,7 +416,8 @@
             </div>
             <div class="row mb-lg-5 mb-5 mx-auto">
                 <div class="col-12 bg-blog">
-                    <p class="p-3 fs-14"> Some devices (including some models of Android phones, such as Nexus and Pixels,
+                    <p class="p-3 fs-14"> Some devices (including some models of Android phones, such as Nexus and
+                        Pixels,
                         some
                         versions of ACR122 USB module) may have issues with NFC link stability, so please be patient
                         when
