--- a/pages/tools.html
+++ b/pages/tools.html
@@ -98,7 +98,7 @@
                 <div class="col-12 bg-white  rounded p-lg-4 p-3">
                     <div class="table-responsive">
                         <table class="table tools__table">
-                            <h4 class="fw-semibold">FIDO2 Keys</h4>
+                            <h4 class="tools_table_title fw-semibold">FIDO2 Keys</h4>
                             <thead>
                                 <tr class="tools_table_selects text-muted">
                                     <th>Models</th>
